add select/unselect + refresh features

--- a/views/organizations_tree.html
+++ b/views/organizations_tree.html
@@ -12,10 +12,9 @@
 <tbody id="tbody">
   
   <tr>
-    
     <!-- name columns -->
     <td class="main-column name-column">
-      <abntree tree-data="my_data" tree-control="my_tree" on-select="my_tree_handler(branch)" expand-level="2"></abntree>
+      <foldertree tree-data="my_data" tree-control="my_tree" expand-level="2" selected-item="selectedItem"></foldertree>
     </td>
 
     <!-- checkbox columns -->
