--- a/views/checkbox.html
+++ b/views/checkbox.html
@@ -1,5 +1,5 @@
 <ul class="nav nav-list nav-pills nav-stacked abn-tree">
-  <li ng-repeat="row in tree_rows | filter:{visible:true} track by row.branch.uid" ng-animate="'abn-tree-animate'" ng-class="'level-' + 1 + (row.branch.selected ? ' active':'')" class="abn-tree-row">
+  <li ng-repeat="row in tree_rows | filter:{visible:true} track by row.branch.uid"  ng-class="'level-' + 1 + (row.branch.selected ? ' active':'')" >
     <a ng-click="user_clicks_branch(row)">
       <span class="indented tree-label" >
         <input type='checkbox' ng-model='row.label'  />
