--- a/views/organizations_tree.html
+++ b/views/organizations_tree.html
@@ -12,16 +12,21 @@
 <tbody id="tbody">
   
   <tr>
+
     <!-- name columns -->
-    <td class="main-column name-column">
+<!--     <td class="main-column name-column">
       <foldertree tree-data="my_data" tree-control="my_tree" expand-level="4" selected-item="selectedItem"></foldertree>
+    </td> -->
+    <td class="main-column name-column">
+      <ba-foldertree tree-data="my_data" tree-control="my_tree" expand-level="4" selected-item="selectedItem"></ba-foldertree>
     </td>
-
     <!-- checkbox columns -->
-    <td class="main-column" ng-repeat="prop in prop_names">
+<!--     <td class="main-column" ng-repeat="prop in prop_names">
       <checkboxtree column="prop" tree-data="my_data" toggle-select="toggleSelect" selected-item="selectedItem"></checkboxtree>
+    </td> -->
+    <td class="main-column" ng-repeat="prop in prop_names">
+      <ba-checkboxtree column="prop" tree-data="my_data" toggle-select="toggleSelect" selected-item="selectedItem"></ba-checkboxtree>
     </td>
-
   </tr>
 </tbody>
 </table>
