--- a/styles/app.css
+++ b/styles/app.css
@@ -1,13 +1,3 @@
-/* 
-   abn-tree.css
-
-   style for the angular-bootstrap-nav-tree
-   for both Bootstrap 2 and Bootstrap 3
-
-*/
-
-
-
 /* ------------------------------------------
 AngularJS Animations...
 
@@ -165,7 +155,8 @@ thead{
 }
 
 #header button{
-  margin-right: 15px;
+  /*margin-right: 15px;*/
+  margin-left: -8px;
 }
 
   
@@ -225,7 +216,7 @@ thead{
 }
 #close{
   position: absolute;
-  right: 10px;
+  right: 15px;
 }
   
   
